syntax = "proto3";

option go_package = "genproto/users_service";

package users_service;
import "user.proto";

service UserMessageList{
    rpc CreateUserMessage(MessageRequest) returns(Empty){}
    rpc CreateAdminMessage(MessageRequest) returns(Empty){}
    rpc UpdateMessage(UpdateMessageRequest) returns(Empty){}
    rpc GetUserMessage(GetMessageUserRequest) returns(GetMessageUserResponse){}
    rpc GetAdminAllMessage(Empty) returns(GetMessageAdminResponse){}
    rpc GetMessageAdminID(GetMessageUserRequest) returns(GetMessageAdminById){}
    rpc SendMessageUser(TelegramMessageUser) returns(TelegramMessageResponse){}
    rpc PayMessagePost(PaymsqRequest) returns(Empty){}
    rpc PayMessageGet(PaymsqUser) returns(PaymsqResponse){}
}

message UpdateMessageRequest{
    string id = 1;
    string read = 2;
}

message MessageRequest{
    string text = 1;
    string file = 2;
    string user_id = 3;
}

message Message{
    string id = 1;
    string text = 2;
    string file = 3;
    string status = 4;
    string read = 5;
    string user_id = 6;
    string created_at = 7;
}

message MessageResponse{
    string id = 1;
    string status = 2;
    string message = 3;
    string created_at = 4;
    string read = 5;
}

message GetMessageUserRequest{
    string user_id = 1;
}

message GetMessageUserResponse{
    repeated Message messages = 1;
    int64 count = 2;
}

message AdminResponseMessage{
    string last_message = 1;
    string file = 2;
    string read = 3;
    string status = 4;
    string created_at = 5;
    string updated_at = 6;
}

message AdminResponse{
    string user_id = 1;
    string first_name = 2;
    string last_name = 3;
    repeated AdminResponseMessage message = 4;
}

message GetMessageAdminResponse{
    int64 message_count = 1;
    repeated AdminResponse admin_message = 2;
}


message GetMessageAdminById{
    string first_name = 1;
    string last_name = 2;
    string file = 3;
    repeated Message message = 4;
}

message TelegramMessageUser{
    string id = 1;
}

message TelegramMessageResponse{
    string message = 1;
    string file = 2;
    string telegram_id = 3;
    string created_at = 4;
    string updated_at = 5;
}

message PaymsqRequest{
    string user_id = 1;
    string file = 2;
    string message = 3;
    string user_transaction_id = 4;
    string premium_transaction_id = 5;
}

message PaymsqUser{
    string user_transaction_id = 1;
}

message Paymsq{
    string id = 1;
    string file = 2;
    string message = 3;
    string user_transaction_id = 4;
    string premium_transaction_id = 5;
    string created_at = 6;
    string updated_at = 7;
}

message PaymsqResponse{
    repeated Paymsq message = 1;
}